<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.mail.techotrack.lection14.MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Hello World!"/>

    <Button
        android:id="@+id/send_notification_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_1"
        />

    <Button
        android:id="@+id/send_notification_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_notification_1"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_2"
        />

    <Button
        android:id="@+id/send_notification_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_notification_2"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_3"
        />

    <Button
        android:id="@+id/send_notification_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_notification_3"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_4"
        />

    <Button
        android:id="@+id/send_notification_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_notification_4"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_5"
        />

</RelativeLayout>
